# Azalscore

./: .coveragerc  .dockerignore  .env.example  .env.production.example  .env.production.template  .gitignore  .pre-commit-config.yaml  .sync_trigger  =0.7.1  AUDIT_SAST_2026-02-17.md  AUDIT_SCA_2026-02-17.md  AUDIT_SECRETS_2026-02-17.md  BETA_TESTER_PATH.md  CHANGELOG.md  CODE_REVIEW_V2_MIGRATION.md  COMMIT_MESSAGE.txt  CONFORMITE_AZALSCORE.md  DEPLOYMENT_SUCCESS.md  DEPLOY_NOW.md  Dockerfile  Dockerfile.ai  Dockerfile.prod  EXECUTIVE_SUMMARY_AUDIT.md  FIELD_SERVICE_DONE.txt  FIELD_SERVICE_MIGRATION_SUMMARY.txt  FIX_RAPPORT_UUID_SCHEMAS.md  GUIDE_DEMARRAGE_AZALSCORE.md  HOTFIX_P0_BUGS.md  MIGRATION_POS_COMPLETE.txt  MIGRATION_POS_V2_VERIFICATION.sh  MODULE_CRM_T0_E2E_REPORT.md  MULTI_TENANT.txt  P0_ACTION_PLAN.md  PHASE2_2_MIGRATIONS_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_BUSINESS_MODULES_AUDIT.md  PHASE_2.2_SCOPE_ANALYSIS.md  PROMPTS_DEVELOPPEMENT_MODULES.md  PROMPTS_DEVELOPPEMENT_MODULES_V2.md  PROMPTS_MODULES_PARALLELES.md  (+87 more)
.claude/: FRONTEND_MODULE_CHECKLIST.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit  pre-push
COMPLIANCE/: BETA_LIMITATIONS.md  INCIDENT_PLAN.md  RISK_REGISTER.md  SECURITY_MODEL.md
ai-control-plane/: Dockerfile  docker-compose.yml
alembic/: env.py
app/: __init__.py  conftest.py  main.py
config/: security.py
docs/: ACHATS_V1_DATA_MODEL.md  ACHATS_V1_PASS_FAIL_CHECKLIST.md  ACHATS_V1_RBAC.md  ACHATS_V1_SCOPE.md  AI_ORCHESTRATION_SYSTEM.md  ANNUAIRES_SAAS.md  API_MAP.md  AUTHENTICATION.md  AXONAUT_PARITY_AUDIT.md  BRANDING_REPORT.md  BRAND_GUIDELINES.md  CALENDRIER_CONTENU.md  COMPARATIF_ERP_2024.md  CRM_T0_USER_GUIDE.md  DR_PLAN.md  ENTERPRISE_HARDENING_CHECKLIST.md  ENTERPRISE_READINESS_REPORT.md  ENVIRONMENTS.md  HTTP_ERROR_HANDLING.md  IMPLEMENTATION_SUMMARY.md  MULTI_TENANT_ARCHITECTURE.md  PRODUCTION_QUICK_START.md  QUALITY_MODULE_VALIDATION_REPORT.md  RBAC_MATRIX_BETA.md  README.md  SCHEMA_UUID_CHECKLIST.md  STAGING.md  STRATEGIE_BACKLINKS.md  TENANT_ISOLATION_AUDIT_DECISIONS.md  UUID_MIGRATION_CHECKLIST.md  VENTES_T0_DATA_MODEL.md  VENTES_T0_PASS_FAIL_CHECKLIST.md  VENTES_T0_RBAC.md  VENTES_T0_SCOPE.md
frontend/: .env.example  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierignore  AZA-FE-NORMS.md  Dockerfile.prod  ESLINT_ERRORS_SUMMARY.md  ESLINT_ERRORS_TODO.txt  IMPLEMENTATION_REPORT.md  NEXT_STEPS.md  PROGRESS_REPORT.md  QUICK_START.md  README.md  SESSION_2026-01-23_FINAL.md  SESSION_SUMMARY.md  STATUS.txt  azalscore_autonomous_guardian.py  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
installer/: README.md  docker-compose.portable.yml  install.sh
launcher/: README.md  azalscore.sh  install.sh
migrations/: 001_multi_tenant.sql  002_auth.sql  003_journal.sql  004_treasury.sql  005_treasury_updates.sql  006_iam_module.sql  007_autoconfig_module.sql  008_triggers_module.sql  009_audit_module.sql  010_qc_module.sql  011_country_packs_module.sql  012_broadcast_module.sql  013_web_module.sql  014_website_module.sql  015_tenants_module.sql  016_commercial_module.sql  017_finance_module.sql  018_hr_module.sql  019_procurement_module.sql  020_inventory_module.sql  021_production_module.sql  022_quality_module.sql  023_maintenance_module.sql  024_projects_module.sql  025_bi_module.sql  026_performance_indexes.sql  027_users_2fa_columns.sql  028_guardian_module.sql  028_super_admin_role.sql  030_audit_hash_chain.sql  031_automated_accounting_module.sql  032_uuid_migration_maintenance_quality.sql  033_beta_tenant_fields.sql  (+4 more)
registry/: README.md
(+4024 files in other folders)
