# AZALS - Configuration Projet ÉLITE
# ====================================
# Configuration centralisée pour outils de qualité

[project]
name = "azals"
version = "0.4.0"
description = "AZALS - ERP Décisionnel Multi-Tenant ÉLITE"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "strict"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/core/config.py",  # Configuration difficile à tester
    "app/**/migrations/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70  # Seuil minimum (à augmenter progressivement)
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# ============================================
# BLACK - Formatage automatique
# ============================================
[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

# ============================================
# ISORT - Tri des imports
# ============================================
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["migrations", ".venv", "venv"]
known_first_party = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ============================================
# MYPY - Typage statique
# ============================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "migrations/",
    "tests/",
    "venv/",
]

[[tool.mypy.overrides]]
module = "app.*"
disallow_untyped_defs = false  # Progressif - à activer plus tard

# ============================================
# RUFF - Linter moderne (alternative flake8)
# ============================================
[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "S",     # flake8-bandit (security)
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (géré par black)
    "B008",  # do not perform function calls in argument defaults
    "S101",  # assert usage (ok dans tests)
    "S104",  # possible binding to all interfaces
    "S105",  # hardcoded password (faux positifs)
    "S106",  # hardcoded password (faux positifs)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
"app/core/config.py" = ["S105", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ============================================
# BANDIT - Analyse sécurité
# ============================================
[tool.bandit]
exclude_dirs = ["tests", "migrations", "venv"]
skips = ["B101", "B104", "B105", "B106"]  # assertions, binding, hardcoded passwords
